# rocker-fish

./: README.md  pyproject.toml
rocker_fish/: __init__.py  rocker_fish.py
rocker_fish/templates/: fish.Dockerfile
