[tool.poetry]
name = "rocker-fish"
version = "0.1.0"
description = ""
authors = ["Kenji Miyake <31987104+kenji-miyake@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
rocker = "^0.2.9"

[tool.poetry.plugins."rocker.extensions"]
fish = "rocker_fish.rocker_fish:Fish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
